--- a/src/index.html
+++ b/src/index.html
@@ -691,14 +691,14 @@
                         KODEO: Sua Especialista em Conteúdo que Gera Resultados.
                     </h2>
                     <p class="lead text-secondary mb-4">
-                        Nós somos a **KODEO Social Media**, uma equipe focada em transformar a
+                        Nós somos a KODEO Social Media, uma equipe focada em transformar a
                         presença digital de empreendedores e empresas, especialmente no
                         nicho de serviços e B2B (business-to-business).
                     </p>
                     <p class="text-secondary">
                         Acreditamos que um bom post não é apenas bonito, mas é uma peça
-                        estratégica de marketing que deve ter o objetivo claro de **vender**
-                        ou construir **autoridade**. Nossos posts são desenhados para
+                        estratégica de marketing que deve ter o objetivo claro de vender
+                        ou construir autoridade. Nossos posts são desenhados para
                         maximizar o engajamento no Instagram, a credibilidade no LinkedIn
                         e a comunidade no Facebook.
                     </p>
