--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>KODEO | Criação de Conteúdo para Instagram, Facebook e LinkedIn</title>
+    <title>Social Media Estratégica KODEO | Criação de Conteúdo e Posts Magnéticos para Instagram, Facebook e LinkedIn</title>
 
     <meta
       name="description"
-      content="Criação de posts magnéticos e gestão de conteúdo para Instagram, Facebook e LinkedIn. Sua Social Media Estratégica KODEO para gerar leads e autoridade."
+      content="Agência KODEO: Criação de conteúdo estratégico e gestão de posts (Feed, Carrossel, Reels) para Instagram, Facebook e LinkedIn. Seu Social Media focado em gerar leads, autoridade e vendas."
     />
     <link
       rel="icon"
@@ -567,12 +567,10 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "KODEO | Criação de Conteúdo e Social Media Estratégico",
-      "url": "#",
-      "image": "https://placehold.co/600x400/8257e5/E1E1E6?text=KODEO+Social+Media",
+      "url": "https://www.kodeo.com.br", "image": "https://placehold.co/600x400/8257e5/E1E1E6?text=KODEO+Social+Media",
       "priceRange": "R$ 499 - R$ 1499/mês",
       "areaServed": { "@type": "Country", "name": "Brasil" },
-      "serviceType": ["Criação de Posts Instagram/Facebook/LinkedIn", "Gestão de Mídias Sociais", "Copywriting para Vendas"],
-      "contactPoint": {
+      "serviceType": ["Criação de Posts Instagram/Facebook/LinkedIn", "Gestão de Mídias Sociais", "Copywriting para Vendas", "Agência Social Media"], "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+55-11-98096-0531",
         "contactType": "Consultoria de Social Media"
@@ -663,7 +661,7 @@
               <h1
                 class="display-4 fw-bolder text-light mb-3 text-gradient-custom"
               >
-                CRIE POSTS MAGNÉTICOS PARA INSTAGRAM, FACEBOOK E LINKEDIN.
+                SOCIAL MEDIA ESTRATÉGICA KODEO: CRIAÇÃO DE POSTS PARA INSTAGRAM, FACEBOOK E LINKEDIN.
               </h1>
               <p class="lead fw-semibold text-secondary mb-4">
                 Pare de perder vendas com conteúdo amador. A <strong>KODEO</strong> cria posts
@@ -701,7 +699,7 @@
             <div class="col-lg-4 text-center d-none d-lg-block hero-mascote-container">
                 <img 
                     src="../src/upload/mascote_kodeo.jpg" 
-                    alt="Mascote KODEO representando uma carta/envelope"
+                    alt="Mascote KODEO Social Media Estratégica representando uma carta/envelope e a comunicação digital"
                     class="img-fluid hero-mascote-img"
                 />
             </div>
@@ -1106,8 +1104,7 @@
               <div class="testimonial-card">
                 <div class="testimonial-author mb-3">
                   <img
-                    src="https://i.pravatar.cc/60?img=17" 
-                    alt="Foto do cliente Bianca Alves"
+                    src="https://i.pravatar.cc/60?img=25" alt="Foto da cliente Bianca Alves"
                     class="testimonial-avatar"
                     onerror="this.src='https://placehold.co/60x60/8257e5/E1E1E6?text=B.A.'"
                   />
@@ -1127,8 +1124,7 @@
               <div class="testimonial-card">
                 <div class="testimonial-author mb-3">
                   <img
-                    src="https://i.pravatar.cc/60?img=43"
-                    alt="Foto do cliente Daniel Costa"
+                    src="https://i.pravatar.cc/60?img=68" alt="Foto do cliente Daniel Costa"
                     class="testimonial-avatar"
                     onerror="this.src='https://placehold.co/60x60/04d361/121214?text=D.C.'"
                   />
@@ -1148,8 +1144,7 @@
               <div class="testimonial-card">
                 <div class="testimonial-author mb-3">
                   <img
-                    src="https://i.pravatar.cc/60?img=50"
-                    alt="Foto da cliente Vera Lúcia"
+                    src="https://i.pravatar.cc/60?img=31" alt="Foto da cliente Vera Lúcia, Advogada"
                     class="testimonial-avatar"
                     onerror="this.src='https://placehold.co/60x60/ff9900/121214?text=V.L.'"
                   />
@@ -1175,7 +1170,7 @@
             <div class="col-lg-8 text-center">
               <img 
                   src="../src/upload/mascote_kodeo_fundo_social_media_new_york.jpg" 
-                  alt="Mascote KODEO em paisagem noturna futurista de Nova Iorque"
+                  alt="Mascote KODEO Social Media em cenário futurista de Nova Iorque, simbolizando a presença digital"
                   class="cta-mascote-img mb-4"
               />
               <h2 class="display-5 fw-bolder text-light mb-4">
@@ -1253,8 +1248,8 @@
                   >
                     <i class="fab fa-whatsapp"></i> (11) 98096-0531
                   </a>
-                  <a href="mailto:contato@kodeo.com.br" class="footer-contact-item">
-                      <i class="fas fa-envelope"></i> contato@kodeo.com.br
+                  <a href="mailto:joaovictor8600@yahoo.com.br" class="footer-contact-item">
+                      <i class="fas fa-envelope"></i> joaovictor8600@yahoo.com.br
                   </a>
               </div>
           </div>
