mudança no erros das imagens no vercel

--- a/src/index.html
+++ b/src/index.html
@@ -567,10 +567,12 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "KODEO | Criação de Conteúdo e Social Media Estratégico",
-      "url": "https://www.kodeo.com.br", "image": "https://placehold.co/600x400/8257e5/E1E1E6?text=KODEO+Social+Media",
+      "url": "https://www.kodeo.com.br", 
+      "image": "https://placehold.co/600x400/8257e5/E1E1E6?text=KODEO+Social+Media",
       "priceRange": "R$ 499 - R$ 1499/mês",
       "areaServed": { "@type": "Country", "name": "Brasil" },
-      "serviceType": ["Criação de Posts Instagram/Facebook/LinkedIn", "Gestão de Mídias Sociais", "Copywriting para Vendas", "Agência Social Media"], "contactPoint": {
+      "serviceType": ["Criação de Posts Instagram/Facebook/LinkedIn", "Gestão de Mídias Sociais", "Copywriting para Vendas", "Agência Social Media"], 
+      "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+55-11-98096-0531",
         "contactType": "Consultoria de Social Media"
@@ -698,7 +700,7 @@
             
             <div class="col-lg-4 text-center d-none d-lg-block hero-mascote-container">
                 <img 
-                    src="../src/upload/mascote_kodeo.jpg" 
+                    src="upload/mascote_kodeo.jpg" 
                     alt="Mascote KODEO Social Media Estratégica representando uma carta/envelope e a comunicação digital"
                     class="img-fluid hero-mascote-img"
                 />
@@ -738,7 +740,7 @@
                 <div class="col-lg-6 text-center d-none d-lg-block">
                     <div class="about-image-container">
                         <img 
-                            src="../src/upload/imagem_kode_escritorio_pessoa.jpg" 
+                            src="upload/imagem_kode_escritorio_pessoa.jpg" 
                             alt="Equipe KODEO Social Media reunida em escritório moderno planejando estratégia de posts para Instagram, Facebook e LinkedIn."
                             class="about-image"
                         />
@@ -1168,8 +1170,8 @@
         <div class="container py-md-5">
           <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-              <img 
-                  src="../src/upload/mascote_kodeo_fundo_social_media_new_york.jpg" 
+                <img 
+                  src="upload/mascote_kodeo_fundo_social_media_new_york.jpg" 
                   alt="Mascote KODEO Social Media em cenário futurista de Nova Iorque, simbolizando a presença digital"
                   class="cta-mascote-img mb-4"
               />
